Bug fix: raise the header above category cards using z-index.

--- a/styles/about-us/banner.css
+++ b/styles/about-us/banner.css
@@ -11,7 +11,7 @@
   left: 0px;
   height: 100%;
   width: 100%;
-  z-index: 100;
+  z-index: 90;
   display: flex;
 }
 
@@ -20,7 +20,7 @@
   height: 100%;
   background-color: rgb(15, 57, 144);
   color: white;
-  font-family: "Fredoka";
+  font-family: 'Fredoka';
   font-size: 60px;
   font-weight: 900;
   display: flex;
