--- a/styles/home/products-section.css
+++ b/styles/home/products-section.css
@@ -61,8 +61,8 @@
 
 .category-card i {
   position: absolute;
-  top: 270px;
-  right: 80px;
+  top: 275px;
+  right: 60px;
   font-size: 35px;
   transition: all 300ms ease;
 }
